force-app/main/default/objects/SCOPE_Milestone__c/SCOPE_Milestone__c.object-meta.xml
<CustomObject>
    <label>SCOPE Milestone</label>
    <nameField>
        <displayFormat>SM-{000000}</displayFormat>
        <label>SCOPE Milestones Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCOPE Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>