force-app/main/default/objects/SCOPE_Milestone__c/fields/Approved_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rebate__c</fullName>
    <label>Approved Rebate</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>