force-app/main/default/objects/SCOPE_Milestone__c/fields/SCOPE_Milestone_Note__c.field-meta.xml
<CustomField>
    <fullName>SCOPE_Milestone_Note__c</fullName>
    <label>SCOPE Milestone Note</label>
    <type>TextArea</type>
</CustomField>