force-app/main/default/objects/SCOPE_Milestone__c/fields/SCOPE_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>SCOPE_Opportunity__c</fullName>
    <label>SCOPE Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SCOPE Milestones</relationshipLabel>
    <relationshipName>SCOPE_Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>