force-app/main/default/objects/SCOPE_Milestone__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Update this field to ‘Files Attached - Ready to Submit’ once your milestone documentation has been attached here and your opportunity is in progress. Then select ‘Submit for Approval’ at the top.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Files Attached – Ready to Submit</fullName>
            </value>
            <value>
                <fullName>Waiting on Partner</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>