force-app/main/default/objects/SCOPE_Milestone__c/validationRules/Approved_Milestone_status_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Milestone_status_not_allowed</fullName>
    <active>true</active>
    <description>Do not allow a user to select the Milestone Status of Approved. The approval process will do this.</description>
    <errorConditionFormula>AND(
	ISPICKVAL (Status__c , &quot;Approved&quot; ),
	ISCHANGED(Status__c )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Milestone Status of Approved will be automatically selected after approval</errorMessage>
</ValidationRule>