force-app/main/default/objects/SCOPE_Milestone__c/listViews/SCOPE_Milestones.listView-meta.xml
<ListView>
    <fullName>SCOPE_Milestones</fullName>
    <columns>NAME</columns>
    <columns>SCOPE_Opportunity__c</columns>
    <columns>Milestone__c</columns>
    <columns>Status__c</columns>
    <columns>Approved_Date__c</columns>
    <columns>Approved_Rebate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>SCOPE Milestones</label>
    <language>en_US</language>
</ListView>